テーマカラーを変更

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -1,9 +1,10 @@
 // ==================
 // color
-$green-1: #008830;
-$green-2: #00b849;
-$green-3: #00d154;
-$green-4: #00eb5e;
+$blue-1: #0772c0;
+$blue-2: #2680bf;
+$blue-3: #087acc;
+$blue-4: #0a99ff;
+
 $gray-1: #333;
 $gray-2: #4d4d4d;
 $gray-3: #707070;
@@ -112,12 +113,12 @@ $z-index-map: (
   display: inline-block;
   border-radius: 4px;
   background-color: $white;
-  border: 1px solid $green-1;
-  color: $green-1;
+  border: 1px solid $blue-1;
+  color: $blue-1;
   cursor: pointer;
 
   &:hover {
-    background-color: $green-1;
+    background-color: $blue-1;
     color: $white;
 
     > i {
